--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,14 @@ asgiref==3.8.1
 beautifulsoup4==4.12.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
+colorama==0.4.6
 Django==5.1
+django-allauth==65.1.0
 django-livereload-server==0.5.1
 django-widget-tweaks==1.5.0
 Faker==28.4.1
 idna==3.7
+loguru==0.7.2
 pillow==10.4.0
 python-dateutil==2.9.0.post0
 requests==2.32.3
@@ -17,3 +20,4 @@ tornado==6.4.1
 tzdata==2024.1
 urllib3==2.2.2
 whitenoise==6.7.0
+win32-setctime==1.1.0
